[package]
name = "rust-https"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.4.0", features = ["rustls-0_21"] }
env_logger = "0.10.0"
log = "0.4.20"
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
